# Oplayground

./: .gitignore  LICENSE  Makefile  README.md  Taskfile.dist.yml  pyproject.toml
.circleci/: config.yml
src/cipg/: __init__.py  core.py
src/cipg/commands/: cipg.py
tests/cipg/: test_cipg.py
