[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "cipg"
authors = [{name = "Benjamin Althues", email = "benjamin@babab.nl"}]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
dependencies = [
    "ansicolors >=1.1.8,<2.0",
    "pycommand >=0.4.0,<0.5",
]


[project.optional-dependencies]
dev = [
    "pyinstaller >=5.9.0,<6.0",
]
test = [
    "flake8 >=6.0.0,<7.0",
    "pytest >=7.2.0,<8.0",
]


[project.urls]
Home = "https://github.com/babab/cipg"


[project.scripts]
cipg = "cipg.commands.cipg:main"


[tool.flit.sdist]
exclude = [".circleci", ".gitignore"]


[tool.pytest.ini_options]
addopts = "-vv -p no:cacheprovider"
